[package]
name = "finlib-ta"
version = "0.6.0"
authors = ["Sergey Potapov <blake131313@gmail.com>"]
edition = "2021"
description = "Technical analysis library. Implements number of indicators: EMA, SMA, RSI, MACD, Stochastic, etc."
keywords = ["technical-analysis", "financial", "ema", "indicators", "trading"]
license = "MIT"
repository = "https://github.com/sarsoo/ta-rs"
homepage = "https://github.com/sarsoo/ta-rs"
documentation = "https://docs.rs/finlib-ta"
readme = "README.md"
categories = ["no-std", "finance", "science", "algorithms"]
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md"
]

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
libm = { version = "0.2.15" }

[dev-dependencies]
assert_approx_eq = "1.0.0"
csv = "1.1.0"
bencher = "0.1.5"
rand = "0.6.5"
bincode = "1.3.1"

[features]
default = ["std"]
std = ["serde?/std"]
serde = ["dep:serde"]

[profile.release]
lto = true

[[bench]]
name = "indicators"
path = "benches/indicators.rs"
harness = false

[[example]]
name = "ema_serde"
path = "examples/ema_serde.rs"
required-features = ["serde"]
